--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -21,7 +21,7 @@
       <h1 style="font-family: Poppins;">Online Gaming Provider</h1>
 
       <div class="about_map">
-        <img src="assets/sirplay-market_2022-1-768x369.png" alt="" />
+        <img src="assets/sirplay-market_2022-1-768x369.png" alt="map" />
       </div>
     </div>
 
@@ -115,111 +115,111 @@ We take pride in presenting our clients with the widest selection of games withi
              <div class="partners_logo_sec partners_logo_sec_desk aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000">
                 <div class="partners_logo_box">
                    <a href="https://velkii365.com/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/velkii365.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/velkii365.webp" alt="velkii365" class="img-fluid partner-image copy">
                    </a>
                 </div>
                 <div class="partners_logo_box">
                   <a href="https://exch.9xbet.vip/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/xbet9.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/xbet9.webp" alt="xbet9" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://baaji365.biz/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/baaji365biz.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/baaji365biz.webp" alt="baaji365biz" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.bazi365.live/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/bazi365.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/bazi365.webp" alt="bazi365" class="img-fluid partner-image copy">
                   </a>
                 </div>
 
 
                 <div class="partners_logo_box">
                   <a href="https://velkiex123.biz/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/velkiex123biz.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/velkiex123biz.webp" alt="velkiex123biz" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://bdbaji365.live/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/bdbaji365.webp" alt="invalid" class="img-fluid partner-image copy" style="padding: 8px 12px;">
+                    <img src="assets/partner-logo-new/bdbaji365.webp" alt="bdbaji365" class="img-fluid partner-image copy" style="padding: 8px 12px;">
                   </a>
 
                   <a href="https://star365.live/#/home" target="_blank">
-                    <img src="/assets/partner-logo-new/star365.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="/assets/partner-logo-new/star365.webp" alt="star365" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.agun365.win/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/agun365.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/agun365.webp" alt="agun365" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.9ex365.bet/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/ex3659.png" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/ex3659.png" alt="ex3659" class="img-fluid partner-image copy">
                   </a>
                 </div>
 
 
                 <div class="partners_logo_box">
                   <a href="https://velkibuzzer.io/#/home" target="_blank">
-                    <img src="/assets/partner-logo-new/velkibuzzer.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="/assets/partner-logo-new/velkibuzzer.webp" alt="velkibuzzer" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.betswiz.com/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/betswiz.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/betswiz.webp" alt="betswiz" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.skyfaire.live/#/dash" target="_blank">
-                    <img src="/assets/partner-logo-new/skyfaire.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="/assets/partner-logo-new/skyfaire.webp" alt="skyfaire" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.betguru.win/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/betguru.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/betguru.webp" alt="betguru" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.playbdt.live/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/playbdt.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/playbdt.webp" alt="playbdt" class="img-fluid partner-image copy">
                   </a>
                 </div>
 
 
                 <div class="partners_logo_box">
                   <a href="https://www.betskyexch.com/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/betskyexch.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/betskyexch.webp" alt="betskyexch" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.lc247.live/#/dash"  target="_blank">
-                    <img src="assets/partner-logo-new/lc247.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/lc247.webp" alt="lc247" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.neyaludis.live/#/dash"  target="_blank">
-                    <img src="assets/partner-logo-new/9wickets.svg" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/9wickets.svg" alt="9wickets" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.mpk.live/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/mpk.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/mpk.webp" alt="mpk" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.betgame.live/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/betgame.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/betgame.webp" alt="betgame" class="img-fluid partner-image copy">
                   </a>
                 </div>
 
 
                 <div class="partners_logo_box">
                   <a href="https://www.rajbet.win/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/rajbet.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/rajbet.webp" alt="rajbet" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.citybett.com/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/citybett.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/citybett.webp" alt="citybett" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://auraexch.live/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/aura.png" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/aura.png" alt="aura" class="img-fluid partner-image copy">
                   </a>
                 </div>
 
 
                 <div class="partners_logo_box">
                   <a href="https://www.3wickets.io/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/wicket3.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/wicket3.webp" alt="wicket3" class="img-fluid partner-image copy">
                   </a>
                 </div>
              </div>
@@ -230,91 +230,91 @@ We take pride in presenting our clients with the widest selection of games withi
              <div class="partners_logo_sec partners_logo_sec_mob aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000">
                 <div class="partners_logo_box">
                   <a class="box" href="https://velkii365.com/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/velkii365.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/velkii365.webp" alt="velkii365" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://exch.9xbet.vip/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/xbet9.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/xbet9.webp" alt="xbet9" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://baaji365.biz/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/baaji365biz.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/baaji365biz.webp" alt="baaji365biz" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://velkiex123.biz/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/velkiex123biz.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/velkiex123biz.webp" alt="velkiex123biz" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://bdbaji365.live/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/bdbaji365.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/bdbaji365.webp" alt="bdbaji365" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://star365.live/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/star365.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/star365.webp" alt="star365" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://velkibuzzer.io/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/velkibuzzer.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/velkibuzzer.webp" alt="velkibuzzer" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.betswiz.com/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/betswiz.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/betswiz.webp" alt="betswiz" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.skyfaire.live/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/skyfaire.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/skyfaire.webp" alt="skyfaire" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.betskyexch.com/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/betskyexch.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/betskyexch.webp" alt="betskyexch" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.lc247.live/#/dash"  target="_blank">
-                    <img src="assets/partner-logo-new/lc247.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/lc247.webp" alt="lc247" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.neyaludis.live/#/dash"  target="_blank">
-                    <img src="assets/partner-logo-new/9wickets.svg" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/9wickets.svg" alt="9wickets" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box"  href="https://www.rajbet.win/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/rajbet.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/rajbet.webp" alt="rajbet" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.citybett.com/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/citybett.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/citybett.webp" alt="citybett" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.agun365.win/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/agun365.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/agun365.webp" alt="agun365" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.9ex365.bet/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/ex3659.png" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/ex3659.png" alt="ex3659" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.betguru.win/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/betguru.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/betguru.webp" alt="betguru" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.playbdt.live/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/playbdt.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/playbdt.webp" alt="playbdt" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.betgame.live/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/betguru.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/betguru.webp" alt="betguru" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.mpk.live/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/mpk.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/mpk.webp" alt="mpk" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://auraexch.live/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/aura.png" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/aura.png" alt="aura" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href=" https://www.bazi365.live/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/bazi365.webp" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="assets/partner-logo-new/bazi365.webp" alt="bazi365" class="img-fluid partner-image copy">
                   </a>
                  
 
