--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,12 +4,12 @@
       <div class="comp_row">
         <div class="comp_col">
           <a target="_blank" href="https://www.gamblingcommission.gov.uk">
-          <img src="https://b2c.static112233.com/assets/images/gamblingcomm.png" style="width:88px; margin-left: 5px;" />
+          <img src="https://b2c.static112233.com/assets/images/gamblingcomm.png" alt="gamblingcomm" style="width:88px; margin-left: 5px;" />
         </a>
         </div>
         <div class="comp_col_1">
           <a  target="_blank" href="https://gordonmoody.org.uk/">
-            <img class="comp_1" src="https://b2c.static112233.com/assets/images/gordonmoody.png" style="width:88px; margin-left: 8px;" />
+            <img class="comp_1" src="https://b2c.static112233.com/assets/images/gordonmoody.png" alt="gordonmoody" style="width:88px; margin-left: 8px;" />
           </a>
         </div>
         <!-- <div class="comp_col_1">
@@ -27,13 +27,13 @@
       <div class="comp_row seconcomp_row">
         <div class="comp_col">
           <a target="_blank" href="https://www.begambleaware.org/">
-            <img class="comp_2"  src="https://b2c.static112233.com/assets/images/betblocker.png" style="width:88px;" />
+            <img class="comp_2"  src="https://b2c.static112233.com/assets/images/betblocker.png" alt="betblocker" style="width:88px;" />
           </a>
 
         </div>
         <div class="comp_col_1 ">
           <a target="_blank" href="https://www.gamstop.co.uk/">
-            <img class="comp_3 secondcomp_col_1" src="https://b2c.static112233.com/assets/images/gamecare.png" style="width:88px;margin-left: 74px; "/>
+            <img class="comp_3 secondcomp_col_1" src="https://b2c.static112233.com/assets/images/gamecare.png" alt="gamecare" style="width:88px;margin-left: 74px; "/>
           </a>
         </div>
         <!-- <div class="comp_col_1">
