--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="esports-betting-col2">
-<img class="esport_img" src="assets/sirplay image 2.webp" alt="">
+<img class="esport_img" src="assets/sirplay image 2.webp" alt="eSports Betting">
         </div>
     </div>
 </section>
@@ -57,51 +57,51 @@
         </div>
         <div class="top-esports-col2">
                 <div class="top-esports-col2-image">
-                    <img class="esports_1" src="assets/Counter-Strike-Global-Offensive.png.webp" alt="">
+                    <img class="esports_1" src="assets/Counter-Strike-Global-Offensive.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_2"  src="assets/Dota-2-logo.png.webp" alt="">
+                    <img class="esports_2"  src="assets/Dota-2-logo.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_3" src="assets/overwatch.png.webp" alt="">
+                    <img class="esports_3" src="assets/overwatch.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_4" src="assets/NBA2k.jpg.webp" alt="">
+                    <img class="esports_4" src="assets/NBA2k.jpg.webp" alt="Top eSports titles">
                 </div >
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_5" src="/assets/Warcraft-III.png.webp" alt="">
+                    <img class="esports_5" src="/assets/Warcraft-III.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_6" src="assets/League-of-Legends.png.webp" alt="">
+                    <img class="esports_6" src="assets/League-of-Legends.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_7" src="assets/Rocket-League.png.webp" alt="">
+                    <img class="esports_7" src="assets/Rocket-League.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_8" src="assets/Call-of-Duty-esports.png.webp" alt="">
+                    <img class="esports_8" src="assets/Call-of-Duty-esports.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_9" src="assets/King-of-Glory.png.webp" alt="">
+                    <img class="esports_9" src="assets/King-of-Glory.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_10" src="assets/Madden-NFL.png.webp" alt="">
+                    <img class="esports_10" src="assets/Madden-NFL.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_11" src="assets/Rainbow-Six-Siege.png.webp" alt="">
+                    <img class="esports_11" src="assets/Rainbow-Six-Siege.png.webp" alt="Top eSports titles">
                 </div>
 
                 <div class="top-esports-col2-images">
-                    <img class="esports_12" src="assets/fortnite.png.webp" alt="">
+                    <img class="esports_12" src="assets/fortnite.png.webp" alt="Top eSports titles">
                 </div>
         </div>
     </div>
@@ -113,7 +113,7 @@
 <section>
     <div class="easy-setup-main">
         <div class="easy-setup-col1-photo">
-<img src="assets/VRNL 1-1.jpg" alt="">
+<img src="assets/VRNL 1-1.jpg" alt="setup and creation of the online networks">
         </div>
 
         <div class="easy-setup-col2">
