--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -40,7 +40,7 @@
 
             <div class="iframe_sec_images">
 
-                <img src="assets/live casino.webp" width="100%">
+                <img src="assets/live casino.webp" width="100%" alt="live casino">
 
             </div>
         </div>
@@ -63,7 +63,7 @@
 <section class="container7">
     <div class="container7-row">
     <div class="container7-col1">
-        <img class="container_images_b" src="assets/Sirplay image 8.webp">
+        <img class="container_images_b" src="assets/Sirplay image 8.webp" alt="live casino Api">
 
     </div>
 
