--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -39,7 +39,8 @@
         <img
           class="platform_img"
           src="assets/sirplay-vrnl-1.webp"
-        width="544" height="310">
+        width="544" height="310"
+        alt="vrnl">
         <div class="platform_you_tube">
           <a href="#"
             ><img
@@ -47,6 +48,7 @@
               src="assets/play.png.webp"
               width="520"
               height="291"
+              alt="youtube"
           /></a>
         </div>
       </div>
@@ -84,6 +86,7 @@
           src="assets/Sirplay image 6.webp"
           width="543"
           height="317"
+          alt="White Label Solutions"
         />
       </div>
     </div>
@@ -97,6 +100,7 @@
           src="assets/sirplay igaming.webp"
           width="520"
           height="325"
+          alt="iGaming Platform"
         />
       </div>
       <div class="gaming_col_2">
@@ -153,6 +157,7 @@
           src="assets/sirplay online c.webp"
           width="840"
           height="700"
+          alt="Online Casino"
         />
       </div>
     </div>
@@ -169,6 +174,7 @@
           src="assets/sirplay vrnl 19.webp"
           width="790"
           height="372"
+          alt="live casino"
         />
       </div>
       <div class="live_col_1">
@@ -274,6 +280,7 @@
           title="integration_platforms"
           width="545"
           height="315"
+          alt="Integration with other platforms"
         />
       </div>
       <div class="integration_col_1">
@@ -316,7 +323,7 @@
         <div class="white_back"></div>
       </div>
       <div class="integration_col_1">
-<img class="virtual_img" src="assets/virtual-games.png.webp">
+<img class="virtual_img" src="assets/virtual-games.png.webp" alt="virtual games">
       </div>
     </div>
   </section>
