--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="online-casino_col_2">
-        <img class="white_casino_1" src="assets/vrnl casino image.webp" />
+        <img class="white_casino_1" src="assets/vrnl casino image.webp" alt="online casino software"/>
         <div class="online-casino-youtube">
           <a href="#"><img class="youtube_img" src="assets/play.png.webp" width="520" height="280" /></a>
         </div>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="container2-col2">
-        <img class="container_imgs" src="assets/sirplay vrnl 26_data.webp" />
+        <img class="container_imgs" src="assets/sirplay vrnl 26_data.webp" alt="Live Casino providers" />
       </div>
     </div>
   </section>
@@ -69,7 +69,7 @@
   <section class="container3">
     <div class="container3-row">
       <div class="container3-col1">
-        <img src="assets/vrnl_17.webp" />
+        <img src="assets/vrnl_17.webp" alt="software platform"/>
       </div>
 
       <div class="col2-text">
@@ -204,7 +204,8 @@
           "></div>
       </div>
       <div class="container5-col1">
-        <img class="integration_images" src="assets/sirplay vrnl 12.webp" />
+        <img class="integration_images" src="assets/sirplay vrnl 12.webp" alt="integrated through iFrame or
+        APIs"/>
       </div>
     </div>
     
