--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="sportsbetting-section1-col2">
-  <img src="assets/players.png" width="100%">
+  <img src="assets/players.png" width="100%" alt="Sports Betting">
     </div>
   </div>
 </section>
@@ -57,7 +57,7 @@
       <img
         class="sport_images_1"
         src="assets/sirplay image 4 (1).webp"
-        alt="images"
+        alt="Sports Betting software"
       />
     </div>
 
@@ -143,7 +143,7 @@
       <img
         class="images_benefit_1"
         src="assets/Sirplay image 5.webp"
-        alt="images"
+        alt="vrnl"
       />
     </div>
   </div>
@@ -187,6 +187,7 @@
         width="353"
         height="650"
         class="web3_img"
+        alt="sports betting"
       />
     </div>
   </div>
@@ -196,7 +197,7 @@
 <section>
   <div class="sportsbetting-crypto-sports-main">
     <div class="sportsbetting-crypto-sports-col1">
-      <img class="phone_images" src="assets/Sirplay image 9.webp" alt="" />
+      <img class="phone_images" src="assets/Sirplay image 9.webp" alt="B2C sports" />
     </div>
     <div class="sportsbetting-crypto-sports-col2">
       <h2>B2C sports betting software</h2>
@@ -260,7 +261,7 @@
       </p>
     </div>
     <div class="sportsbetting-betting-software-col2">
-      <img class="addverties_img" src="assets/sirplay online c.webp" alt="" />
+      <img class="addverties_img" src="assets/sirplay online c.webp" alt="Betting software" />
     </div>
   </div>
 </section>
