--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -36,7 +36,7 @@
         <img
           class="white_label_imgs"
           src="assets/sirplay vrnl 27.webp"
-          alt="white-label-casino-platform.jpg.webp"
+          alt="white-label-casino"
         />
       </div>
     </div>
@@ -68,7 +68,7 @@
   <section class="custom-sec">
     <div class="cutom-main">
       <div class="custom-img">
-        <img class="custome_img" src="assets/VRNL 3.webp" alt="" />
+        <img class="custome_img" src="assets/VRNL 3.webp" alt="white-label-customizations" />
       </div>
 
       <div class="head-custom">
@@ -121,7 +121,7 @@
         <img
           class="odds_sec_img"
           src="assets/VRNL 3_odds.webp"
-          alt="different-odds-outcomes.png.webp"
+          alt="white-label-betting-platform"
         />
       </div>
     </div>
@@ -166,7 +166,7 @@
 
     <div class="risk">
       <div class="risk-img">
-        <img src="assets/Zero-Risk.png" alt="Zero-Risk.png" />
+        <img src="assets/Zero-Risk.png" alt="Zero-Risk" />
       </div>
       <div class="risk-para">
         <h1>Zero risk</h1>
@@ -183,7 +183,7 @@
       <div class="branding-img">
         <img
           src="assets/sportsbook-branding.jpeg.webp"
-          alt="sportsbook-branding.jpeg.webp"
+          alt="sportsbook-branding"
         />
       </div>
       <div class="branding-head">
@@ -202,7 +202,7 @@
       <div class="lanimg">
         <img
           src="assets/multi-language-multi-currency.jpeg.webp"
-          alt="multi-language-multi-currency.jpeg.webp"
+          alt="multi-language-multi-currency"
         />
       </div>
       <div class="lanhead">
