--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <router-outlet (activate)="onActivate($event)"></router-outlet>
 <app-scroll-btn></app-scroll-btn>
 <div class="side-slider contact-service-box">
@@ -7,65 +6,34 @@
 	</button>
 	<div class="side-slider-content">
 		<ul id="side-cs-cont" class="contact-service-list">
-			<li id="cs-44" class="icon-cs">
-			<a target="_blank">
-				<img src="https://img.c88rx.com/upload/customerservice/image_84.png" ui-key="realIconPath">
-				<span ui-key="displayText">Live Chat 24/7</span>
-				
-			</a>
-			
-			<hr>
-		</li>
-		<li id="cs-46" class="icon-telegram">
-			
-			
-			<hr>
-		</li><li id="cs-143" class="icon-telegram">
-			
-			
-			<hr>
-		</li><li id="cs-145" class="icon-fb">
-			<a target="_blank" href="https://www.facebook.com/profile.php?id=100092326342619&mibextid=LQQJ4d">
-				<img src="assets\icons8-facebook.gif" >
-				<span ui-key="displayText">Facebook</span>
-				
-			</a>
-			
-			<hr>
-		</li><li id="cs-45" class="icon-mail">
-			<a target="_blank" href="https://www.instagram.com/vrnl_exchange">
-				<img src="assets\icons8-instagram.gif">
-				<span ui-key="displayText">instagram</span>
-				
-			</a>
-			
-			<hr>
-		</li><li id="cs-81" class="icon-mail">
-			<a target="_blank" href="https://t.me/Johnmark1974">
-				<img src="assets\icons8-twitter-circled.gif" ui-key="realIconPath">
-				<span ui-key="displayText">Twitter</span>
-				
-			</a>
-			
-			<hr>
-		</li>
-        <li id="cs-81" class="icon-mail">
-			<a target="_blank" href="skype:live:9960f32f776599a2?chat">
-				<img src="assets\icons8-skype.gif" ui-key="realIconPath">
-				<span ui-key="displayText">skype</span>
-				
-			</a>
-			
-			<hr>
-		</li>
-		<li id="cs-81" class="icon-mail">
-			<a target="_blank" href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0">
-				<img src="assets/whatsapp-gif.gif" ui-key="realIconPath">
-				<span ui-key="displayText">whatsapp</span>
-				
-			</a>
-			
-			<hr>
-		</li></ul>
+			<li id="cs-145" class="icon-fb">
+				<a target="_blank" href="https://www.facebook.com/profile.php?id=100092326342619&mibextid=LQQJ4d">
+					<img src="assets\icons8-facebook.gif">
+					<span ui-key="displayText">Facebook</span>
+
+				</a><hr>
+			</li>
+			<li id="cs-45" class="icon-mail">
+				<a target="_blank" href="https://www.instagram.com/vrnl_exchange">
+					<img src="assets\icons8-instagram.gif">
+					<span ui-key="displayText">instagram</span></a><hr>
+			</li>
+			<li id="cs-81" class="icon-mail">
+				<a target="_blank" href="https://t.me/Johnmark1974">
+					<img src="assets\icons8-twitter-circled.gif" ui-key="realIconPath">
+					<span ui-key="displayText">Twitter</span></a><hr>
+			</li>
+			<li id="cs-81" class="icon-mail">
+				<a target="_blank" href="skype:live:9960f32f776599a2?chat">
+					<img src="assets\icons8-skype.gif" ui-key="realIconPath">
+					<span ui-key="displayText">skype</span></a><hr>
+			</li>
+			<li id="cs-81" class="icon-mail">
+				<a target="_blank"
+					href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0">
+					<img src="assets/whatsapp-gif.gif" ui-key="realIconPath">
+					<span ui-key="displayText">whatsapp</span></a><hr>
+			</li>
+		</ul>
 	</div>
 </div>
