--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -18,6 +18,7 @@
         <img
           class="iframe_images"
           src="assets/sirplay vrnl 12.webp"
+          alt="Sportsbook iFrame"
         />
       </div>
     </div>
@@ -55,6 +56,7 @@
         <img
         class="types_images"
         src="assets/sirplay image 4 (1).webp"
+        alt="Types of sportsbook iframe"
       />
       </div>
       
@@ -88,7 +90,7 @@
   <section class="types_sports_sec_iframe">
     <div class="sports_type_row">
       <div class="sports_col_1_iframe">
-        <img class="managed_images" src="assets/VRNL 2.webp" />
+        <img class="managed_images" src="assets/VRNL 2.webp" alt="managed sportsbook"/>
       </div>
     
       <div class="sports_col_iframe">
