--- a/src/app/lottery-games/lottery-games.component.html
+++ b/src/app/lottery-games/lottery-games.component.html
@@ -78,7 +78,7 @@
 
 
         <div class="index4-right-img">
-            <img class="lottery_images" src="assets/sirplay vrnl 20.webp" alt="">
+            <img class="lottery_images" src="assets/sirplay vrnl 20.webp" alt="vrnl">
 
         </div>
 
@@ -97,7 +97,7 @@
 <section class="container12">
 <div class="index4-main-div">
 <div class="index4-left-img">
-    <img class="images_data" src="assets/online-vrnl-1.webp" alt="">
+    <img class="images_data" src="assets/online-vrnl-1.webp" alt="online Website Branding">
 </div>
 
 <div class="index4-right-text">
