--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -18,7 +18,7 @@
         <div class="white_casino_col_1 ">
     <div class="white_casino_v">
         <!-- <iframe width="" height="" src="assets/online-whitelabel-casino.jpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe> -->
-        <img src="assets/look-girl-art-hall-wallpaper-preview.jpg"  class="casino-img tv_image">
+        <img src="assets/look-girl-art-hall-wallpaper-preview.jpg"  class="casino-img tv_image" alt="Online Casino platform">
     </div>
         </div>
     </div>
@@ -29,7 +29,7 @@
     <section class="whites_label_sec">
         <div class="whites_c_row whites_label">
             <div class="white_f_col">
-    <img class="tv_image" src="assets/sirplay crypto tv.webp" >
+    <img class="tv_image" src="assets/sirplay crypto tv.webp" alt="White label casino">
             </div>
             <div class="white_f_col_1">
     
@@ -68,7 +68,7 @@
     <div class="whites_label">
         <div>
             <span>
-                <img class="explain_img" src="assets/sirplay white s.webp" width="900" height="355">
+                <img class="explain_img" src="assets/sirplay white s.webp" width="900" height="355" alt="white-label-betting">
             </span>
         
     </div>
@@ -100,7 +100,7 @@
       <img
           class="casino_sec_img2"
           src="assets/sirplay online c.webp"
-         
+         alt="vrnl online"
         />
         </div>
     </div>
@@ -110,8 +110,8 @@
     <section class="white_sol_sec">
     <div class="white_labe_live_row">
         <div class="white_labe_live_col">
-            <img class="white_images_sec_sol" src="assets/sirplay vrnl 26_data.webp">
-    
+            <img class="white_images_sec_sol" src="assets/sirplay vrnl 26_data.webp" alt="Live Casino providers">
+              
         </div>
         <div class="white_labe_live_col_1">
             <h1 class="white_live_h"> <span>White Label</span>  Casino in numbers</h1>
