changes(img compp)

--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -63,7 +63,7 @@
 <section class="container7">
     <div class="container7-row">
     <div class="container7-col1">
-        <img class="container_images_b" src="assets/Sirplay image 8.webp">
+        <img class="container_images_b" src="assets/Sirplay image 8_11zon.webp">
 
     </div>
 
