--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -71,7 +71,7 @@
 
 
         <div class="right-img-index3">
-            <img src="assets/sirplay vrnl 11.webp" alt="">
+            <img src="assets/sirplay vrnl 11_11zon.webp" alt="">
 
         </div>
     </div>
@@ -84,7 +84,7 @@
 <section class="container10">
     <div class="index3-main-div">
         <div class="index3-left-img">
-            <img class="container_10_img" src="assets/VRNL 3.webp" alt="">
+            <img class="container_10_img" src="assets/VRNL 3_11zon.webp" alt="">
         </div>
     
         <div class="index3-right-text">
