--- a/src/app/lottery-games/lottery-games.component.html
+++ b/src/app/lottery-games/lottery-games.component.html
@@ -97,7 +97,7 @@
 <section class="container12">
 <div class="index4-main-div">
 <div class="index4-left-img">
-    <img class="images_data" src="assets/online-vrnl-1.webp" alt="">
+    <img class="images_data" src="assets/online-vrnl-1_11zon.webp" alt="">
 </div>
 
 <div class="index4-right-text">
