--- a/src/app/our-theme/our-theme.component.css
+++ b/src/app/our-theme/our-theme.component.css
@@ -92,7 +92,7 @@ p {
     width: 100%;
     font-size: 30px;
     font-weight: 700;
-    
+    color: black;
     padding-top: 40px
   }
   .card-container {
