--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -3,7 +3,7 @@
     <div class="container">
     <div class="card"><a href="https://www.skyexch.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/skylogo.png" alt="">
+            <img class="lb_partner_logo" src="assets/skylogo.png" alt="skylogo">
             <h4 class="logoname">Skyexch</h4>
             </div>
         <div class="card-content">
@@ -16,7 +16,7 @@
     </div>
     <div class="card"><a href="https://velki.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/velkilogo.webp" alt="" style="width: 170px;">
+            <img class="lb_partner_logo" src="assets/velkilogo.webp" alt="velkilogo" style="width: 170px;">
             <h4 class="logoname " style="    padding-top: 60px;">Velki</h4>
             </div>
         <div class="card-content">
@@ -29,7 +29,7 @@
     </div>
     <div class="card">  <a href="https://gullybet.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-           <img class="lb_partner_logo" src="assets/gullybet.webp" alt="" style="    width: 240px;">
+           <img class="lb_partner_logo" src="assets/gullybet.webp" alt="gullybet" style="    width: 240px;">
             <h4 class="logoname" style="    padding-top: 45px;">Gullybet</h4>
             </div>
         <div class="card-content">
@@ -42,7 +42,7 @@
     </div>
     <div class="card"  ><a href="https://babu.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/bb88_logo_w_sponsor.webp "alt="" style="width: 197px;">
+            <img class="lb_partner_logo" src="assets/bb88_logo_w_sponsor.webp "alt="bb88_logo_w_sponsor" style="width: 197px;">
             <h4 class="logoname">Babu88</h4>
             </div>
         <div class="card-content">
@@ -55,7 +55,7 @@
     </div>
     <div class="card"><a href="https://aura.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/aura.webp" alt="" style="width: 205px;">
+            <img class="lb_partner_logo" src="assets/aura.webp" alt="aura" style="width: 205px;">
             <h4 class="logoname">Aura444</h4>
             </div>
         <div class="card-content">
@@ -68,7 +68,7 @@
     </div>
     <div class="card"><a href="http://www.diamond.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/diamond.png" alt="" style="    width: 191px;">
+            <img class="lb_partner_logo" src="assets/diamond.png" alt="diamond" style="    width: 191px;">
             <h4 class="logoname">Diamond</h4>
             </div>
         <div class="card-content">
@@ -81,7 +81,7 @@
     </div>
     <div class="card"><a href="https://lotus.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/lotus.webp" alt="" style="width: 200px;">
+            <img class="lb_partner_logo" src="assets/lotus.webp" alt="lotus" style="width: 200px;">
             <h4 class="logoname">Lotus</h4>
             </div>
         <div class="card-content">
@@ -94,7 +94,7 @@
     </div>
     <div class="card"><a href="https://9bazi.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/logo-bazi.webp" alt="" style="    width: 200px;">
+            <img class="lb_partner_logo" src="assets/logo-bazi.webp" alt="logo-bazi" style="    width: 200px;">
             <h4 class="logoname">9bazi</h4>
             </div>
         <div class="card-content">
@@ -107,7 +107,7 @@
     </div>
     <div class="card"><a href="https://world777.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/world7777.webp" alt="" style="width: 200px;">
+            <img class="lb_partner_logo" src="assets/world7777.webp" alt="world7777" style="width: 200px;">
             <h4 class="logoname">World777</h4>
             </div>
         <div class="card-content">
@@ -120,7 +120,7 @@
     </div>
     <div class="card"><a href="https://lcexch.vrnlexch.com/" target="_blank">
         <div class="flip-box-front">
-            <img class="lb_partner_logo" src="assets/lcexch.webp" alt="" style="width: 200px;">
+            <img class="lb_partner_logo" src="assets/lcexch.webp" alt="lcexch" style="width: 200px;">
             <h4 class="logoname">Lcexch</h4>
             </div>
         <div class="card-content">
