--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,8 @@
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank" href="https://t.me/Johnmark1974">
-					<img src="assets\icons8-twitter-circled.gif" ui-key="realIconPath">
-					<span ui-key="displayText">Twitter</span></a><hr>
+					<img src="assets\icons8-telegram.gif" ui-key="realIconPath">
+					<span ui-key="displayText">Telegram</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank" href="skype:live:9960f32f776599a2?chat">
