--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -161,7 +161,7 @@
         <div class="nav_col_3">
           <a target="_blank" href="https://www.facebook.com/profile.php?id=100092326342619&mibextid=LQQJ4d" style="color: black;" ><i class="fa-brands fa-facebook-f"></i></a>
          
-          <a target="_blank" href="https://t.me/Johnmark1974" style="color: black;" ><i class="fa-brands fa-twitter"></i></a>
+          <a target="_blank" href="https://t.me/Johnmark1974" style="color: black;" ><i class="fa-brands fa-telegram"></i></a>
           <!-- <i class="fa-brands fa-youtube"></i>
           <i class="fa-brands fa-linkedin"></i> -->
           <a target="_blank" href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0" style="color: black;" ><i class="fa-brands fa-whatsapp"></i></a>
