--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -35,7 +35,7 @@
       <div class="label-img">
         <img
           class="white_label_imgs"
-          src="assets/sirplay vrnl 27.webp"
+          src="assets/sirplay vrnl 27_11zon.webp"
           alt="white-label-casino"
         />
       </div>
@@ -68,7 +68,8 @@
   <section class="custom-sec">
     <div class="cutom-main">
       <div class="custom-img">
-        <img class="custome_img" src="assets/VRNL 3.webp" alt="white-label-customizations" />
+        <img class="custome_img" src="assets/VRNL 3_11zon
+        .webp" alt="white-label-customizations" />
       </div>
 
       <div class="head-custom">
@@ -120,7 +121,7 @@
       <div class="odd-headimg">
         <img
           class="odds_sec_img"
-          src="assets/VRNL 3_odds.webp"
+          src="assets/VRNL 3_odds_11zon.webp"
           alt="white-label-betting-platform"
         />
       </div>
