--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -30,7 +30,7 @@
 <div class="onther_param">
 <h2 class="onther_head">We make it easy for you to plug into business.</h2>
 <p class="onther_p1">This is a theme and can be customized, see it in action:</p>
-<p class="onther_a"><a href=" https://www.lc247.co/" target="_blank" style="color: #a0c528;"><strong> https://www.lc247.co/</strong></a></p>
+<p class="onther_a"><a href=" https://www.lc247.co/m/sports" target="_blank" style="color: #a0c528;"><strong> https://www.lc247.co/m/sports</strong></a></p>
 </div>
 
 <div class="onther_btn">
@@ -90,7 +90,7 @@
 		</div>
 	</div>
   <div class="web_3_igaming_img">
-    <img class="web_images" src="/assets/vrnl online sportbook software.jpg" alt="sportbook_software" title="Web3 plateform">
+    <img class="web_images" src="assets/vrnl online sportbook software_11zon (1).jpg" alt="sportbook_software" title="Web3 plateform">
   </div>
 </div>
 
