--- a/src/app/bitcoin/bitcoin.component.css
+++ b/src/app/bitcoin/bitcoin.component.css
@@ -1,9 +1,9 @@
-#animate-area { 
+/* #animate-area { 
     width: 100%; 
     height: 400px; 
     background-image: url(assets/we-are-sirplay.jpg.webp);
   background-size: cover ;
-}
+} */
 .hover-1_1{
   color: #0a0a0a;
   border-radius: 0px;
