--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,7 +1,7 @@
 #animate-area { 
     width: 100%; 
     height: 400px; 
-    background-image: url(assets/Untitled-4.png);
+    background-image: url('../../assets/Untitled-4.png');
   background-size: cover ;
 }
 @media (max-width: 768px){
