--- a/src/app/decentralized/decentralized.component.css
+++ b/src/app/decentralized/decentralized.component.css
@@ -1,9 +1,9 @@
-#animate-area { 
+/* #animate-area { 
     width: 100%; 
     height: 400px; 
     background-image: url(assets/we-are-sirplay.jpg.webp);
   background-size: cover ;
-}
+} */
 .hover-1_1 {
   background-color: #a0c528;
   color: black;
