--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -199,7 +199,7 @@
       </div>
     </div>
 
-    <div class="language">
+    <!-- <div class="language">
       <div class="lanimg">
         <img
           src="assets/multi-language-multi-currency.jpeg.webp"
@@ -214,7 +214,7 @@
           on the platform, including <a href=""> crypto currencies.</a>
         </p>
       </div>
-    </div>
+    </div> -->
   </section>
 </div>
 <app-footer></app-footer>
