--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -71,7 +71,7 @@
 
 
         <div class="right-img-index3">
-            <img src="assets/sirplay vrnl 11_11zon.webp" alt="">
+            <img src="assets/VRNL 4.webp" alt="">
 
         </div>
     </div>
