--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div class="esports-betting-middle-row2">
-<img class="all_images" src="assets/sirplay vrnl 11.webp" alt="">
+<img class="all_images" src="assets/VRNL 4.webp" alt="">
         </div>
 
     </div>
