--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -68,8 +68,7 @@
   <section class="custom-sec">
     <div class="cutom-main">
       <div class="custom-img">
-        <img class="custome_img" src="assets/VRNL 3_11zon
-        .webp" alt="white-label-customizations" />
+        <img class="custome_img" src="assets/VRNL 3_11zon.webp" alt="white-label-customizations" />
       </div>
 
       <div class="head-custom">
