--- a/src/styles.css
+++ b/src/styles.css
@@ -7174,7 +7174,7 @@ cursor: pointer;
 } */
 
 .first-sec {
-    background: url(/assets/breadcumbs.jpg.webp);
+    background: url(assets/breadcumbs.jpg.webp);
 
     background-size: cover;
 
