--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -2,8 +2,8 @@
   <header class="page-header" [class.is-sticky]="isSticky">
     <nav>
       <div class="hader_row">
-        <div class="nav_col" >
-          <img class="images_logo" src="assets/VRNL new.png" routerLink="/">
+        <div class="nav_col">
+          <a ><img class="vrnl_logo" src="assets/VRNL new.png"  routerLink="/"/></a>
         </div>
         <div class="nav_col_1">
           <ul class="nav_col_2">
