--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -1,10 +1,8 @@
 
 <header class="header">
-    <img
-      src="assets/VRNL new.png"
-      alt=""
-      class="logo new_logos" routerLink="/"
-    />
+  <div class="nav_col">
+    <a ><img class="vrnl_logo" src="assets/VRNL new.png"  routerLink="/"/></a>
+  </div>
 
     <nav class="navbar">
   
