--- a/src/app/streaming/streaming.component.css
+++ b/src/app/streaming/streaming.component.css
@@ -1,7 +1,7 @@
 #animate-area { 
     width: 100%; 
     height: 400px; 
-    background-image: url(assets/Untitled-4.png);
+    /* background-image: url(assets/Untitled-4.png); */
   background-size: cover ;
 }
 .online-casino-button-index6:hover {
@@ -62,7 +62,6 @@
 }
 .index6-sec3-righttext p{
   font-family: Poppins;
-  /* width: 479px; */
 }
 .index6-sec3-righttext{
   width: 100%;
