--- a/src/app/whitelabel/whitelabel.component.css
+++ b/src/app/whitelabel/whitelabel.component.css
@@ -1,344 +1,174 @@
 *{
     font-family: Poppins !important;
-    word-wrap: break-word;
-}
+    word-wrap: break-word;}
 .white_label_imgs {
     width: 595px;
-    height: 400px;
-}
+    height: 400px;}
 .custome_img{
     width: 485px;
-    height: 345px;   
-}
+    height: 345px;}
 .label-para {
     padding-left: 15px;
-    padding-right: 15px;
-}
-
+    padding-right: 15px;}
 .white-label{
-    padding: 80px 0px;
-    
-}
+    padding: 80px 0px;}
 .sec-header{
     font-size: 34px;
     color: #000000;
     line-height: 34px;
-    text-align: left;
-}
+    text-align: left;}
 @media screen and (max-width: 820px){
     .white_label_imgs{
         width: 100%;
-        height: auto;
-        }
+        height: auto;}
         .custome_img{
             width: 100%;
-            height: auto;  
-        }
-        
-}
+            height: auto;}}
 .containt{
     width: 1233px;
     justify-content: center;
     margin: 0 auto;
-    font-family: Poppins !important;
-    /* padding: 80px 0; */
-}
-
+    font-family: Poppins !important;}
 .bold{
     font-weight: 900;
-    color: #000;
-}
+    color: #000;}
 .label-list-para{
     justify-content: center;
     margin: 0 auto;
     display: grid;
     font-size: 16px;
     margin-top: 44px;
-    /* padding-left: 51px; */
     color: #000;
-    font-weight: 350
-}
-p{
-    /* font-size: 16px; */
-    line-height: 30px;
-    font-family: Poppins;
-  
-}
-p {
-    display: block;
-    /* margin-block-start: 1em; */
+    font-weight: 350}
+p{line-height: 30px;
+    font-family: Poppins;}
+p {display: block;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     color: #000;
-    font-weight: 395;
-    
-}
+    font-weight: 395;}
 .head-custom h1{
     font-weight: 600;
-    font-weight: 600;
- 
     font-size: 50px;
     color: #a0c528;
     line-height: 91px;
-    text-align: left;
-}
-.dash{
-    font-size: 18px;
-}
-h2 {
+    text-align: left;}
+.dash{font-size: 18px;}
+h2{
     display: block;
     font-size: 34px;
     margin-block-start: 0.83em;
     margin-block-end: 0.83em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    font-weight: bold;
-}
+    font-weight: bold;}
 .letter-spacing{
-    letter-spacing: 1px;
-}
+    letter-spacing: 1px;}
 .custom-sec{
-    font-family: Poppins;
-}
+    font-family: Poppins;}
 .plat-odd{
     margin-top: 75px !important;
     margin-left: -15px;
-    margin-right: -15px;
-}
+    margin-right: -15px;}
 .font-weight{
     font-weight: 600;
     font-family: Poppins;
-    font-size: 50px;
-}
-
+    font-size: 50px;}
 
 /* media Quary */
 @media (max-width: 1200px){
-    .containt {
-        width: 1170px;
-    }
-    
-}
-
-
+.containt {width: 1170px;}}
 @media only screen and (min-width: 820px) and (min-height: 1180px){
-    .containt {
-        width: 818px;
-    }
-    .cutom-main {
-        justify-content: left;
-        gap: 0px;
-    }
-    .white_label_imgs {
-        width: 455px;
-        height: 296px;
-    }
-    .label-para p{
-        font-size: 20px;
-        line-height: 2;
-    }
-    .label-list-para{
-        margin-left: 38px;
-        margin-top: 0px;
-    }
-    .head-custom h1,.sec-header{
-        font-size: 28px;
-    }
-    .sec-header{
-        font-weight: 100px;
-    }
-    p{
-        font-size: 20px;
-        line-height: 1.7;
-    }
-    .head-custom{
-        letter-spacing: 1px;
-    }
-    .plat-odd{
-        margin-top: 0px !important;
+.containt {width: 818px;}
+.cutom-main {justify-content: left;
+        gap: 0px;}
+.white_label_imgs {width: 455px;
+        height: 296px;}
+.label-para p{font-size: 20px;
+        line-height: 2;}
+.label-list-para{ margin-left: 38px;
+        margin-top: 0px;}
+.head-custom h1,.sec-header{font-size: 28px;}
+.sec-header{font-weight: 100px;}
+p{font-size: 20px;line-height: 1.7;}
+.head-custom{letter-spacing: 1px;}
+ .plat-odd{margin-top: 0px !important;
         margin-left: 0px;
         margin-right: 0px;
         gap: 0px;
         padding-left: 40px;
-        padding-right: 84px;
-      
-    }
-    .odd-headimg img,.tool_sec_img{
-        width: 354px;
-        height: 254px;
-    }
-    .plat-oddhead h1,.toolhead h1 {
-        font-size: 28px;
-    }
-    .tools{
-        margin-left: 0px;
+        padding-right: 84px;}
+.odd-headimg img,.tool_sec_img{width: 354px;
+        height: 254px;}
+.plat-oddhead h1,.toolhead h1 {font-size: 28px;}
+.tools{margin-left: 0px;
         margin-right: 0px;
-        gap: 20px;
-    }
-    .risk-img {
-        width: 17%;
-    }
-    .risk-para,.branding-head {
-        width: 66%;
-    }   
-    .branding{
-        justify-content: start !important;
-    } 
-    .branding-img{
-        width: 24%;
-    }
-    .branding-img img{
-        margin-left: -23px;
-    }
-    .lanimg img{
-        margin-left: -89px;
-    }
-    .lanhead{
-        width: 70%;
-    }
-    .lanimg{
-        width: 16%;
-    }
-    .custome_img {
-        width: 100%;
-        height: auto;
-    }
-}
-
-/* @media screen and (max-width: 720px) and (min-height: 540px)  {
-    .first-sec {
-        height: 216px;
-    }
-    .containt {
-        width: 516px;
-    }
-} */
+        gap: 20px;}
+.risk-img {width: 17%;}
+.risk-para,.branding-head {width: 66%;}   
+.branding{justify-content: start !important;} 
+.branding-img{width: 24%;}
+.branding-img img{margin-left: -23px;}
+.lanimg img{margin-left: -89px;}
+.lanhead{width: 70%;}
+.lanimg{width: 16%;}
+.custome_img {width: 100%;
+        height: auto;}}
 @media (max-width: 768px){
-    .containt {
-        width: 360px;
-    }
-    .first-head h1 {
-    font-size: 27px;
-    letter-spacing: 1.5px;
-    }
-    .first-sec {
-        height: 284px;
-        padding: 72px 0 65px !important;
-    }
-    .home{
-        font-size: 18px;
+.containt {width: 360px;}
+.first-head h1 {font-size: 27px;
+    letter-spacing: 1.5px;}
+.first-sec {height: 284px;
+        padding: 72px 0 65px !important;}
+.home{font-size: 18px;
         font-weight: 395;
-        display: grid;
-    }
-    .dash{
-        padding-bottom: 10px;
-    }
-    .lil-para {
-        letter-spacing: .5px;
-    }
-    .white-label{
-        padding: 0;
-    }
-    .label-list-para{
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-    .head-custom h1{
+        display: grid;}
+.dash{padding-bottom: 10px;}
+ .lil-para {letter-spacing: .5px;}
+.white-label{padding: 0;}
+.label-list-para{padding-left: 15px;
+        padding-right: 15px;}
+.head-custom h1{
         font-size: 23px;
         line-height: 0;
-        margin-bottom: 51px;
-      
-    }
-    .sec-header{
+        margin-bottom: 51px;}
+.sec-header{
         font-size: 20px;
         line-height: 0px;
         font-weight: 570;
-        margin-bottom: 34px;
-    }
-    .niva-separator1{
-        margin-left: 15px;
-    }
-    .plat-odd{
-        margin-top: 0px !important;
-    }
-    .plat-oddhead{
+        margin-bottom: 34px;}
+.niva-separator1{
+        margin-left: 15px;}
+.plat-odd{margin-top: 0px !important;}
+.plat-oddhead{
         padding-left: 15px;
-        padding-right: 15px;
-    }
-    .tools {
-        margin-top: 0px;
-    }
-    .custom-sec{
-    box-sizing: border-box;
-   
-    width: 100%;
-    margin-top: 43px;
-
-    }
-p{
-    line-height: 28px;
-}
-.plat-oddhead h1,.toolhead h1 {
-    font-size: 23px;
-}
-.plat-odd h1 {
-    line-height: 3.6;
-}
-.label-para{
-    padding-left: 0px;
+        padding-right: 15px;}
+.tools {margin-top: 0px;}
+.custom-sec{box-sizing: border-box;
+   width: 100%;
+   margin-top: 43px;}
+p{line-height: 28px;}
+.plat-oddhead h1,.toolhead h1 {font-size: 23px;}
+.plat-odd h1 {line-height: 3.6;}
+.label-para{padding-left: 0px;
     padding-right: 0px;
-    font-weight: 395;
+    font-weight: 395;}
+.risk-para h1,.risk-para h2,.risk-para p  {padding: 0px;}
+.risk-para h1,.branding-head h1,.lanhead h1  {font-size: 22px;}
+.risk-para h2,.branding-head h2,.lanhead h2 {font-size: 19px;}
+.branding-head p,.branding-head h1,.branding-head h2, .lanhead p,.lanhead h1,.lanhead h2{padding: 0 0px;
 }
-.risk-para h1,.risk-para h2,.risk-para p  {
-    padding: 0px;
-}
-.risk-para h1,.branding-head h1,.lanhead h1  {
-    font-size: 22px;
-}
-.risk-para h2,.branding-head h2,.lanhead h2 {
-    font-size: 19px;
-}
-.branding-head p,.branding-head h1,.branding-head h2, .lanhead p,.lanhead h1,.lanhead h2{
-    padding: 0 0px;
-}
-.risk-para p,.branding-head p,.lanhead p{
-    font-size: 19px;
-}
-}
+.risk-para p,.branding-head p,.lanhead p{font-size: 19px;}}
 @media (max-width: 370px){
-    .branding-head,.lanhead {
-        padding-left: 15px;
-    }
- }
-
-@media (max-width: 280px){
-    .containt {
-        width: 280px;
-    }
-    .head-custom h1{
-        font-size: 30px;
-    }
-    .sec-header{
-        font-size: 22px;
-    }
-    .sec-line{
-        line-height: 30px;
-    }
-}
-.lanhead a{
-    color: #a0c528;
-}
-.lanhead a:hover{
-    color: #000000;
-}
-.head-custom p,.plat-oddhead p{
-    font-size: 16px;
-}
-.risk-para p,.branding-head p,.lanhead p{
-    font-size: 16px;
-}
-.odds_sec_img{
-    width: 557px;
-    height: 400px;
-}
+    .branding-head,.lanhead {padding-left: 15px;}}
+@media (max-width: 280px){.containt {width: 280px;}
+.head-custom h1{font-size: 30px;}
+.sec-header{font-size: 22px;}
+.sec-line{line-height: 30px;}}
+.lanhead a{color: #a0c528;}
+.lanhead a:hover{color: #000000;}
+.head-custom p,.plat-oddhead p{font-size: 16px;}
+.risk-para p,.branding-head p,.lanhead p{font-size: 16px;}
+.odds_sec_img{width: 557px;
+    height: 400px;}
