--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -123,10 +123,10 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingFive">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                  <img src="assets/download.png"> ENGLISH </button>
+                  data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive" routerLink="/our-theme">
+                  Our Theme </button>
               </h2>
-              <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
+              <!-- <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
                 data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body"><img src="assets/download.png"> English</div>
 
@@ -136,7 +136,7 @@
 
 
 
-              </div>
+              </div> -->
             </div>
 
 
