--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -42,23 +42,23 @@
 
       <div class="company_about com">
         <h4 class="comp_header">Company</h4>
-        <div><p class="comp_list"><a href="/about-us" target="_blank">About Us</a></p></div>
-        <div><p class="comp_list"><a href="/online-sportsbook-software" target="_blank">sportsbook Provider</a></p></div>
+        <div><p class="comp_list"><a routerLink="/about-us" >About Us</a></p></div>
+        <div><p class="comp_list"><a routerLink="/online-sportsbook-software">sportsbook Provider</a></p></div>
         <!-- <div><p class="comp_list">News</p></div>
         <div><p class="comp_list">Certifications</p></div> -->
         <div>
-          <a href="/privacy-policy"><p class="comp_list">Privacy Policy</p></a>
+          <a routerLink="/privacy-policy"><p class="comp_list">Privacy Policy</p></a>
         </div>
-        <div><p class="comp_list"><a href="/contact" target="_blank">Contact Us</a></p></div>
+        <div><p class="comp_list"><a routerLink="/contact" >Contact Us</a></p></div>
       </div>
       <div class="company_about about_left">
         <h4 class="comp_header">Solutions</h4>
-        <div><p class="comp_list"><a href="/sports-betting-software" target="_blank">Sports Betting software</a></p></div>
+        <div><p class="comp_list"><a routerLink="/sports-betting-software" >Sports Betting software</a></p></div>
         <!-- <div><p class="comp_list">Bitcoin Sportsbook</p></div> -->
         <!-- <div><p class="comp_list">Crypto casino</p></div> -->
-        <div><p class="comp_list"><a href="/casino" target="_blank">White Label Casino</a></p></div>
-        <div><p class="comp_list"><a href="/white-label-betting-platform" target="_blank">White Label Betting Platform</a></p></div>
-        <div><p class="comp_list"><a href="/sportsbook-iframe" target="_blank">Sportsbook iFrame</a></p></div>
+        <div><p class="comp_list"><a routerLink="/casino">White Label Casino</a></p></div>
+        <div><p class="comp_list"><a routerLink="/white-label-betting-platform" >White Label Betting Platform</a></p></div>
+        <div><p class="comp_list"><a routerLink="/sportsbook-iframe">Sportsbook iFrame</a></p></div>
       </div>
     </div>
   </section>
