--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -109,7 +109,7 @@
     </ol>
   </div>
   <div class="sport_sol_col">
-    <img class="i-frame_img1" src="assets/Sirplay image 8.webp">
+    <img class="i-frame_img1" src="assets/vrnl_iframe.webp" alt="sportsbook iframe">
       </div>
 </div>
   </section>
