--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="sportsbetting-section1-col2">
-  <img src="assets/players.png" width="100%" alt="Sports Betting">
+  <img src="assets/players_11zon.webp" width="100%" alt="Sports Betting">
     </div>
   </div>
 </section>
