--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -85,7 +85,7 @@
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact</a></li>
             <li>
-              <a class="act" href="/our-theme"
+              <a class="act" routerLink="/our-theme"
                 >
                 <!-- <img src="assets/en.png" alt="flag" /> -->
                  Our Theme
