--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -116,7 +116,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <div class="nav_col" routerLink="/">
-        <img src="assets/VRNL new.png" />
+        <img src="assets/VRNL new.png" alt="vrnl" />
       </div>
       <button
         class="navbar-toggler"
