--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,30 +8,30 @@
 		<ul id="side-cs-cont" class="contact-service-list">
 			<li id="cs-145" class="icon-fb">
 				<a target="_blank" href="https://www.facebook.com/profile.php?id=100092326342619&mibextid=LQQJ4d">
-					<img src="assets\icons8-facebook.gif">
+					<img src="assets\icons8-facebook.gif"alt="Facebook">
 					<span ui-key="displayText">Facebook</span>
 
 				</a><hr>
 			</li>
 			<li id="cs-45" class="icon-mail">
 				<a target="_blank" href="https://www.instagram.com/vrnl_exchange">
-					<img src="assets\icons8-instagram.gif">
+					<img src="assets\icons8-instagram.gif"alt="instagram">
 					<span ui-key="displayText">instagram</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank" href="https://t.me/Johnmark1974">
-					<img src="assets\icons8-telegram.gif" ui-key="realIconPath">
+					<img src="assets\icons8-telegram.gif" ui-key="realIconPath"alt="Telegram">
 					<span ui-key="displayText">Telegram</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank" href="skype:live:9960f32f776599a2?chat">
-					<img src="assets\icons8-skype.gif" ui-key="realIconPath">
+					<img src="assets\icons8-skype.gif" ui-key="realIconPath" alt="skype">
 					<span ui-key="displayText">skype</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank"
-					href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0">
-					<img src="assets/whatsapp-gif.gif" ui-key="realIconPath">
+					href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0" >
+					<img src="assets/whatsapp-gif.gif" ui-key="realIconPath" alt="whatsapp">
 					<span ui-key="displayText">whatsapp</span></a><hr>
 			</li>
 		</ul>
